--- a/maji/views/admin.jade
+++ b/maji/views/admin.jade
@@ -1,6 +1,5 @@
 extends layout
 
 block content
-    Welcome, #{admin.display_name}!
-    a href='/devices'
-        See your devices
+    Welcome #{admin.display_name}!
+    See your devices
