--- a/maji/views/admin.jade
+++ b/maji/views/admin.jade
@@ -1,5 +1,46 @@
 extends layout
 
+block head
+    title Your Devices
+
 block content
-    Welcome #{admin.display_name}!
-    See your devices
+        #new
+            a(href='/devices/add') Add new device
+        table
+            thead
+                tr: th(colspan='9') Your Devices
+            tbody
+                tr(class='table-header') 
+                    td Nickname
+                    td Phone #
+                    td Location
+                    td Sensor
+                    td pH Test
+                    td Turb. Test
+                    td Temp. Test
+                    td Freq.
+                    td  
+                each device, i in adminDevices
+                    tr(class=(i % 2 == 0) ? 'odd' : 'even') 
+                        td  
+                            a(href='/devices/#{device.id}') #{device.nickname}
+                        td  #{device.phone_number}
+                        td  #{device.location_x}, #{device.location_y}
+                        if device.run_detect
+                            td Yes
+                        else
+                            td no
+                        if device.run_pH
+                            td Yes
+                        else
+                            td no
+                        if device.run_turbidity
+                            td Yes
+                        else
+                            td no
+                        if device.run_temperature
+                            td Yes
+                        else
+                            td no
+                        td  #{device.frequency}
+                        td  Delete this
