--- a/maji/views/device.jade
+++ b/maji/views/device.jade
@@ -1,4 +1,25 @@
 extends layout
 
 block content
-    #{device}
+    td  
+        a(href='/devices/#{device.id}') #{device.nickname}
+        td  #{device.phone_number}
+        td  #{device.location_x}, #{device.location_y}
+        if device.run_detect
+            td Yes
+        else
+            td no
+        if device.run_pH
+            td Yes
+        else
+            td no
+        if device.run_turbidity
+            td Yes
+        else
+            td no
+        if device.run_temperature
+            td Yes
+        else
+            td no
+        td  #{device.frequency}
+        td  Delete this
