--- a/maji/views/layout.jade
+++ b/maji/views/layout.jade
@@ -1,10 +1,31 @@
 doctype html
 html
   head
-    title= title || "Maji Safi"
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/layout_style.css')
+    link(rel="icon" type="image/png" href="/images/icon.png")
+    link(href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css')  
+    script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js")
+    block head
   body
     #header
-        h1 Maji safi
-        img(src='/images/favicon-32x32.png') 
-    block content
+        ul
+            li
+                img(src='/images/icon.png' height="24px")
+            li 
+                h1 MAJI SAFI
+            li
+            li
+                if admin
+                    p Welcome #{admin.display_name}!
+                else
+                    p Welcome to Maji Safi!
+
+            li 
+                a(href='/admins') Devices
+            li 
+                if admin
+                    a(href='/logout') Logout
+                else
+                    a(href='/login') Login
+    #bod
+        block content
