--- a/maji/views/data.jade
+++ b/maji/views/data.jade
@@ -1,17 +1,44 @@
 extend layout
 
-table
-  thead
-    tr
-      th Result
-      th Time
-      th Test ID
-      th Device ID
-  tbody
-    - each item in #{items}
-      tr
-        td= item.result
-        td= item.time
-        td= item.test_id
-        td= item.device_id
-        
+block head
+    title Search Results
+
+block content
+        #new
+        table
+            thead
+                tr: th(colspan='9') Search Results
+            tbody
+                tr(class='table-header') 
+                    td Nickname
+                    td Phone #
+                    td Location
+                    td Sensor
+                    td pH Test
+                    td Turb. Test
+                    td Temp. Test
+                    td Freq.
+                    td  
+                each device, i in adminDevices
+                    tr(class=(i % 2 == 0) ? 'odd' : 'even') 
+                        td  
+                            a(href='/devices/#{device.id}') #{device.nickname}
+                        td  #{device.phone_number}
+                        td  #{device.location_x}, #{device.location_y}
+                        if device.run_detect
+                            td Yes
+                        else
+                            td no
+                        if device.run_pH
+                            td Yes
+                        else
+                            td no
+                        if device.run_turbidity
+                            td Yes
+                        else
+                            td no
+                        if device.run_temperature
+                            td Yes
+                        else
+                            td no
+                        td  #{device.frequency}
