--- a/maji/views/admin/admin.jade
+++ b/maji/views/admin/admin.jade
@@ -14,7 +14,7 @@ block content
                     td Nickname
                     td Phone #
                     td Location
-                    td Sensor
+                    td Water Detection
                     td pH Test
                     td Turb. Test
                     td Temp. Test
