--- a/maji/views/admin/device.jade
+++ b/maji/views/admin/device.jade
@@ -100,7 +100,7 @@ block content
                                 else if(result.test_id == 2)
                                     td Turbidity
                                 else if(result.test_id == 3)
-                                    td Temperatures
+                                    td Temperature
                                 else 
                                     td N/A
                                 td #{result.result}
