--- a/maji/views/data.jade
+++ b/maji/views/data.jade
@@ -6,7 +6,7 @@ block head
 block content
         #new
             if !results 
-                p There's no devices in that area!
+                p There are no devices in that area!
             else
                 table
                     thead
