--- a/maji/views/admin/adddevice.jade
+++ b/maji/views/admin/adddevice.jade
@@ -15,19 +15,9 @@ block content
             br
             input(type="text" name="location_y" placeholder="Longitude")
             br
-            p Run Water Detection: 
-            input(type="checkbox" name="run_detect" value:"run_detect")
+            input(type="text" name="sampling_rate" placeholder="Sampling Rate")
             br
-            p Run pH Test: 
-            input(type="checkbox" name="run_pH" value:"run_pH")
-            br
-            p Run Turbidity Test: 
-            input(type="checkbox" name="run_turbidity" value:"run_turbidity")
-            br
-            p Run Temperature Test: 
-            input(type="checkbox" name="run_temperature" value:"run_temperature")
-            br
-            input(type="number" name="frequency" placeholder="Daily Frequency")
+            input(type="text" name="messaging_rate" placeholder="Messaging Rate")
             br
             div
                 input(type="submit" value="Add Device")
