--- a/maji/views/admin/login.jade
+++ b/maji/views/admin/login.jade
@@ -1,11 +1,14 @@
 extends ../layouts/layout
 
+block head
+    title Login
+
 block content
     div(id='login-box' class='popup')
         h2 Login
-        if message
-            #flash
-                #{message}
+        #flash
+            each mess in messages
+                p #{mess}
         form(action="/login" method="post")
                 input(type="text" name="email" placeholder="Email")
                 br
