--- a/maji/views/admin/register.jade
+++ b/maji/views/admin/register.jade
@@ -1,9 +1,14 @@
 extends ../layouts/layout
 
+block head
+    title Sign up
+
 block content
     div(id='register-box' class='popup')
         h2 Sign Up
-        p #{signupMessage}
+        #flash
+            each mess in messages
+                p #{mess}
         form(action="/register" method="post")
                 input(type="text" name="display_name" placeholder="Name")
                 br
@@ -18,4 +23,4 @@ block content
                     input(type="submit" value="Sign Up")
         
         br
-        a(href='/register') Already have an account? Click here to login.
+        a(href='/login') Already have an account? Click here to login.
