--- a/maji/views/data.jade
+++ b/maji/views/data.jade
@@ -7,7 +7,7 @@ block content
         #new
             p Searched for devices within #{search.radius} km of #{search.location}.
             if !results 
-                p There are no devices in that area!
+                p There are no devices in that radius!
             else
                 table
                     thead
