--- a/maji/views/admin/device.jade
+++ b/maji/views/admin/device.jade
@@ -69,7 +69,7 @@ block content
                     div
                         input(type="submit" value="Send")
                     #textmessage
-            .textmini
+            .textmini2
                 h3 Record to SD Card
                 form(id="sd" action="/text/sdrecord/"+device.id method="post")
                     input(type="text" name="duration" placeholder="Recording Duration")
