--- a/maji/views/index.jade
+++ b/maji/views/index.jade
@@ -48,7 +48,7 @@ block content
                 input(type='text' placeholder="Location" name='location')
                 input(type='text' placeholder="Radius (km)" name='radius')
                 br
-                input(type='submit' name='submit' value="Search Data" id="submit") 
+                input(type='submit' name='submit' value="Search Data" id="submitid") 
         div(id='learn_button' class='fakebutton')
             p Learn More
     div(id='about')
